--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <li ng-class="{ 'active' : activeTab=='about' }"><a ng-click="" ng-href="#/{{year || default_year}}/about">About</a></li>
                 <li ng-class="{ 'active' : activeTab=='code-of-conduct' }"><a ng-href="#/{{year || default_year}}/code-of-conduct">Code of Conduct</a>
                 <li ng-class="{ 'active' : activeTab=='agenda' }"><a ng-href="#/{{year || default_year}}/agenda">Agenda</a>
-                <li ng-show="speakers" ng-class="{ 'active' : activeTab=='speakers' }"><a ng-href="#/{{year || default_year}}/speakers">Speakers</a>
+                <li ng-class="{ 'active' : activeTab=='speakers' }"><a ng-href="#/{{year || default_year}}/speakers">Speakers</a>
                 </li>
                 <li ng-class="{ 'active' : activeTab=='news' }"><a ng-href="#/{{year || default_year}}/news">News</a></li>
                 <li ng-class="{ 'active' : activeTab=='photos' }"><a ng-href="#/{{year || default_year}}/photos">Photos</a>
