--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html ng-app="devfest" ng-controller="MainControl">
 <head>
-    <title>DevFest Berlin - {{ getPageTitle() }}</title>
+    <title>DevFest Berlin - A weekend of awesome!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="icon" type="image/png" href="favicon.png"/>
